--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,17 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+        <activity android:name=".FlashActivity"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+                  android:screenOrientation="landscape"
+                  android:keepScreenOn="true"
+                  android:label="@string/app_name">
+            <intent-filter>
+            </intent-filter>
+        </activity>
         <activity android:name="ClockActivity"
                   android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
                   android:screenOrientation="landscape"
@@ -26,8 +35,17 @@
                   android:label="@string/app_name">
             <intent-filter>
                 <!--<action android:name="android.intent.action.MAIN"/>-->
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".StartAtBootReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:label="StartAtBootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
