--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name="ClockActivity"
                   android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
-                  android:screenOrientation="landscape"
+                  android:screenOrientation="portrait"
                   android:keepScreenOn="true"
                   android:label="@string/app_name">
             <intent-filter>
